# ai-agent-study

./: .gitignore  README.md  pyproject.toml
.github/workflows/: marp-deploy.yml
docs/: 01-intro.md  02.md  03.md  04.md  05.md  README.md  discord-bot.md  sample-slide.md
src/: agent.py  agent_2.py  calender.py  discord_agent.py  main.py  mcp.py  mcp_server.py  openai_api.py  test.py
